Added Certificate Modals

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;OCJP - Oracle  Certified Java Programmer</p>
     						</div>
     						<div class="pull-right">
-    							<p>March 2014</p>
+    							<p>March 2014 <a href="#ocjp" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -267,7 +267,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;NIIT Certificate of Excellence</p>
     						</div>
     						<div class="pull-right">
-    							<p>March 2014</p>
+    							<p>March 2014 <a href="#niit" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -276,7 +276,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Cetificate of Excellent Performance - Hindustan Petroleum Internship</p>
     						</div>
     						<div class="pull-right">
-    							<p>July 2014</p>
+    							<p>July 2014 <a href="#hpcl" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -285,7 +285,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Excellent Performance - Job Ninja Internship</p>
     						</div>
     						<div class="pull-right">
-    							<p>January 2016</p>
+    							<p>January 2016 <a href="#jobninja" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -294,7 +294,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Completion: HTML5 Game Development - Udemy</p>
     						</div>
     						<div class="pull-right">
-    							<p>September 2016</p>
+    							<p>September 2016 <a href="#udemy1" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -303,7 +303,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Completion: Java Multithreading - Udemy</p>
     						</div>
     						<div class="pull-right">
-    							<p>October 2016</p>
+    							<p>October 2016 <a href="#udemy2" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
     				</div>
@@ -577,8 +577,152 @@
     			</a>
     		</div>
 
+    		<!-------------------------------- Certificate Modals ---------------------->
+
+    		<div class="portfolio-modal modal fade" id="ocjp" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+    			<div class="model-content">
+    				<div class="close-modal" data-dismiss="modal">
+    					<div class="lr">
+    						<div class="rl">
+    						</div>
+    					</div>
+    				</div>
+	    			<div class="container">
+	    				<div class="row">
+	    					<div class="col-lg-12">
+	    						<div class="model-body">
+	    							<div class="col-lg-12">
+	    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+	    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+    		</div>
+
+    		<div class="portfolio-modal modal fade" id="niit" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+    			<div class="model-content">
+    				<div class="close-modal" data-dismiss="modal">
+    					<div class="lr">
+    						<div class="rl">
+    						</div>
+    					</div>
+    				</div>
+	    			<div class="container">
+	    				<div class="row">
+	    					<div class="col-lg-12">
+	    						<div class="model-body">
+	    							<div class="col-lg-12">
+	    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+	    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+    		</div>
+
+    		<div class="portfolio-modal modal fade" id="ocjp" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+    			<div class="model-content">
+    				<div class="close-modal" data-dismiss="modal">
+    					<div class="lr">
+    						<div class="rl">
+    						</div>
+    					</div>
+    				</div>
+	    			<div class="container">
+	    				<div class="row">
+	    					<div class="col-lg-12">
+	    						<div class="model-body">
+	    							<div class="col-lg-12">
+	    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+	    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+    		</div>
+
+    		<div class="portfolio-modal modal fade" id="jobninja" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+    			<div class="model-content">
+    				<div class="lr">
+    					<div class="rl"></div>
+    				</div>
+    			</div>
+    			<div class="container">
+    				<div class="row">
+    					<div class="col-lg-12">
+    						<div class="model-body">
+    							<div class="col-lg-12">
+    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+    									<hr class="star-primary">
+    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+
+    		<div class="portfolio-modal modal fade" id="udemy1" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+    			<div class="model-content">
+    				<div class="lr">
+    					<div class="rl"></div>
+    				</div>
+    			</div>
+    			<div class="container">
+    				<div class="row">
+    					<div class="col-lg-12">
+    						<div class="model-body">
+    							<div class="col-lg-12">
+    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+    									<hr class="star-primary">
+    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+
+    		<div class="portfolio-modal modal fade" id="udemy2" tabindex="-1" role="dialog" aria-hidden="true">
+    			<div class="model-content">
+    				<div class="lr">
+    					<div class="rl"></div>
+    				</div>
+    			</div>
+    			<div class="container">
+    				<div class="row">
+    					<div class="col-lg-12">
+    						<div class="model-body">
+    							<div class="col-lg-12">
+    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+    									<hr class="star-primary">
+    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+
+
     		<!-- Portfolio Modals -->
-    		<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    		<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
     					<div class="lr">
