--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 	<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-    </head>
+</head>
 
     <body id="page-top" class="index">
 
@@ -397,7 +396,7 @@
     			<div class="row">
     				<div class="col-lg-12">	
     					<div class="pull-left">
-    						<h4>Interactive Task Manager - Human Computer Interaction</h4>
+    						<h4><i class="fa fa-star fa-4" aria-hidden="true"></i>&nbsp;Interactive Task Manager - Human Computer Interaction</h4>
     					</div>
     					<div class="pull-right">
     						<h4 class="text-right">December 2016</h4>
@@ -413,7 +412,7 @@
     			<div class="row">
     				<div class="col-lg-12">	
     					<div class="pull-left">
-    						<h4>GoFood - Buy and Sell Food Online</h4>
+    						<h4><i class="fa fa-star" aria-hidden="true"></i>&nbsp;GoFood - Buy and Sell Food Online</h4>
     					</div>
     					<div class="pull-right">
     						<h4 class="text-right">November 2016</h4>
@@ -429,7 +428,7 @@
     			<div class="row">
     				<div class="col-lg-12">	
     					<div class="pull-left">
-    						<h4>BookCloud - Startup, Web Programming</h4>
+    						<h4><i class="fa fa-star" aria-hidden="true"></i>&nbsp;BookCloud - Startup, Web Programming</h4>
     					</div>
     					<div class="pull-right">
     						<h4 class="text-right">August 2015</h4>
@@ -446,7 +445,7 @@
     			<div class="row">
     				<div class="col-lg-12">	
     					<div class="pull-left">
-    						<h4>Cost Cutting Techniques in LAN, Simulation</h4>
+    						<h4><i class="fa fa-star" aria-hidden="true"></i>&nbsp;Cost Cutting Techniques in LAN, Simulation</h4>
     					</div>
     					<div class="pull-right">
     						<h4 class="text-right">November 2014</h4>
@@ -469,6 +468,7 @@
     			</div>
     		</div>
     	</section>
+    	
     	<!-- Contact Section -->
     	<section id="contact">
     		<div class="container">
@@ -480,32 +480,32 @@
     			</div>
     			<div class="row">
     				<div class="col-lg-8 col-lg-offset-2">
-    					<form name="sentMessage" id="contactForm" novalidate>
+    					<form name="sentMessage" id="contactForm" method="POST" action="https://formspree.io/ad.sam007@gmail.com" novalidate>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
     								<label>Name</label>
-    								<input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+    								<input type="text" class="form-control" placeholder="Name" id="name" name="name" required data-validation-required-message="Please enter your name.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
     								<label>Email Address</label>
-    								<input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+    								<input type="email" class="form-control" placeholder="Email Address" name = "email" id="email" required data-validation-required-message="Please enter your email address.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
     								<label>Phone Number</label>
-    								<input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+    								<input type="tel" class="form-control" placeholder="Phone Number" id="phone" name = "phone" required data-validation-required-message="Please enter your phone number.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
     								<label>Message</label>
-    								<textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+    								<textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required data-validation-required-message="Please enter a message."></textarea>
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
@@ -513,7 +513,7 @@
     						<div id="success"></div>
     						<div class="row">
     							<div class="form-group col-xs-12">
-    								<button type="submit" class="btn btn-success btn-lg">Send</button>
+    								<button type="submit" name="submit" class="btn btn-success btn-lg">Send</button>
     							</div>
     						</div>
     					</form>
@@ -795,6 +795,7 @@
     				</div>
     			</div>
     		</div>
+
     		<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -871,6 +872,7 @@
     				</div>
     			</div>
     		</div>
+
     		<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -952,6 +954,7 @@
     				</div>
     			</div>
     		</div>
+
     		<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -1033,6 +1036,7 @@
     				</div>
     			</div>
     		</div>
+
     		<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -1114,6 +1118,7 @@
     				</div>
     			</div>
     		</div>
+
     		<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -1155,6 +1160,9 @@
     		<!-- jQuery -->
     		<script src="vendor/jquery/jquery.min.js"></script>
 
+    		<!-------------------- AlertifyJS---------------------->
+    		<script src="https://cdnjs.cloudflare.com/ajax/libs/alertify.js/0.5.0/alertify.core.css"></script>
+
     		<!-- Bootstrap Core JavaScript -->
     		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
@@ -1167,6 +1175,7 @@
 
     		<!-- Theme JavaScript -->
     		<script src="js/freelancer.min.js"></script>
+
 
     	</body>
 
