Addded certificate's Images

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;OCJP - Oracle  Certified Java Programmer</p>
     						</div>
     						<div class="pull-right">
-    							<p>March 2014 <a href="#ocjp" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+    							<p>September 2014 <a href="#ocjp" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -266,7 +266,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;NIIT Certificate of Excellence</p>
     						</div>
     						<div class="pull-right">
-    							<p>March 2014 <a href="#niit" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+    							<p>November 2014 <a href="#niit" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -284,7 +284,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Excellent Performance - Job Ninja Internship</p>
     						</div>
     						<div class="pull-right">
-    							<p>January 2016 <a href="#jobninja" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+    							<p>February 2016 <a href="#jobninja" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -293,7 +293,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Completion: HTML5 Game Development - Udemy</p>
     						</div>
     						<div class="pull-right">
-    							<p>September 2016 <a href="#udemy1" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+    							<p>October 2016 <a href="#udemy1" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
 
@@ -380,6 +380,9 @@
     						<img src="img/database-development.png" class="img-responsive" alt="Database Development">
     					</a>
     				</div>
+    			</div>
+    			<div class="row">
+    				<p class="pull-right">* I keep updating my projects on a regular basis.</p>
     			</div>
     		</div>
     	</section>
@@ -498,7 +501,6 @@
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
     								<label>Phone Number</label>
-    								<input type="tel" class="form-control" placeholder="Phone Number" id="phone" name = "phone" required data-validation-required-message="Please enter your phone number.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
@@ -594,8 +596,7 @@
 	    							<div class="col-lg-12">
 	    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
 	    									<hr class="star-primary">
-	    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
-	    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+	    									<img src="img/certificates/oracle.jpg" class="img-responsive img-centered" alt="Oracle Certified Java Programmer">
 	    							</div>
 	    						</div>
 	    					</div>
@@ -617,10 +618,9 @@
 	    					<div class="col-lg-12">
 	    						<div class="model-body">
 	    							<div class="col-lg-12">
-	    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+	    								<h3 class="text-center">NIIT Certificate of Excellence</h3>
 	    									<hr class="star-primary">
-	    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
-	    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+	    									<img src="img/certificates/niit.jpg" class="img-responsive img-centered" alt="NIIT Certificate of Excellencem">
 	    							</div>
 	    						</div>
 	    					</div>
@@ -629,7 +629,7 @@
 	    		</div>
     		</div>
 
-    		<div class="portfolio-modal modal fade" id="ocjp" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+    		<div class="portfolio-modal modal fade" id="hpcl" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
     			<div class="model-content">
     				<div class="close-modal" data-dismiss="modal">
     					<div class="lr">
@@ -642,10 +642,9 @@
 	    					<div class="col-lg-12">
 	    						<div class="model-body">
 	    							<div class="col-lg-12">
-	    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
-	    									<hr class="star-primary">
-	    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
-	    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+	    								<h3 class="text-center">Hinduistan Petroleum - Certificate of Excellent Performance</h3>
+	    								<hr class="star-primary">
+	    								<img src="img/certificates/hpcl.jpg" class="img-responsive img-centered" alt="Hinduistan Petroleum - Certificate of Excellent Performance">
 	    							</div>
 	    						</div>
 	    					</div>
@@ -656,68 +655,74 @@
 
     		<div class="portfolio-modal modal fade" id="jobninja" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
     			<div class="model-content">
-    				<div class="lr">
-    					<div class="rl"></div>
-    				</div>
-    			</div>
-    			<div class="container">
-    				<div class="row">
-    					<div class="col-lg-12">
-    						<div class="model-body">
-    							<div class="col-lg-12">
-    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
-    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
-    							</div>
+    				<div class="close-modal" data-dismiss="modal">
+    					<div class="lr">
+    						<div class="rl">
     						</div>
     					</div>
     				</div>
-    			</div>
+	    			<div class="container">
+	    				<div class="row">
+	    					<div class="col-lg-12">
+	    						<div class="model-body">
+	    							<div class="col-lg-12">
+	    								<h3 class="text-center">Job Ninja - Certificate of Excellent Performance</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/certificates/jobninja.jpg" class="img-responsive img-centered" alt="Job Ninja - Certificate of Excellent Performance">
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
     		</div>
 
     		<div class="portfolio-modal modal fade" id="udemy1" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
     			<div class="model-content">
-    				<div class="lr">
-    					<div class="rl"></div>
-    				</div>
-    			</div>
-    			<div class="container">
-    				<div class="row">
-    					<div class="col-lg-12">
-    						<div class="model-body">
-    							<div class="col-lg-12">
-    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
-    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
-    							</div>
+					<div class="close-modal" data-dismiss="modal">
+    					<div class="lr">
+    						<div class="rl">
     						</div>
     					</div>
     				</div>
-    			</div>
+	    			<div class="container">
+	    				<div class="row">
+	    					<div class="col-lg-12">
+	    						<div class="model-body">
+	    							<div class="col-lg-12">
+	    								<h3 class="text-center">HTML5 Game Development - Udemy</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/certificates/html5GameDevelopment.jpg" class="img-responsive img-centered" alt="HTML5 Game Development - Udemy">
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
     		</div>
 
-    		<div class="portfolio-modal modal fade" id="udemy2" tabindex="-1" role="dialog" aria-hidden="true">
+    		<div class="portfolio-modal modal fade" id="udemy2" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
     			<div class="model-content">
-    				<div class="lr">
-    					<div class="rl"></div>
-    				</div>
-    			</div>
-    			<div class="container">
-    				<div class="row">
-    					<div class="col-lg-12">
-    						<div class="model-body">
-    							<div class="col-lg-12">
-    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
-    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
-    							</div>
+					<div class="close-modal" data-dismiss="modal">
+    					<div class="lr">
+    						<div class="rl">
     						</div>
     					</div>
     				</div>
-    			</div>
+	    			<div class="container">
+	    				<div class="row">
+	    					<div class="col-lg-12">
+	    						<div class="model-body">
+	    							<div class="col-lg-12">
+	    								<h3 class="text-center">Java Multithreading - Udemy</h3>
+	    								<hr class="star-primary">
+	    								<img src="img/certificates/javaMultithreading.jpg" class="img-responsive img-centered" alt="Java Multithreading - Udemy">
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
     		</div>
 
 
