--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
     			</div>
     			<div class="row">
     				<div class="col-lg-8 col-lg-offset-2">
-    					<form name="sentMessage" id="contactForm" method="POST" action="https://formspree.io/ad.sam007@gmail.com" novalidate>
+    					<form name="sentMessage" id="contactForm" novalidate>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
     								<label>Name</label>
@@ -500,7 +500,8 @@
     						</div>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
-    								<label>Phone Number</label>
+    								<label>Phone</label>
+    								<input type="number" class="form-control" placeholder="Phone Number" name = "phone" id="phone" required data-validation-required-message="Please enter your phone number.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
