--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 	    							<div class="col-lg-12">
 	    								<h3 class="text-center">NIIT Certificate of Excellence</h3>
 	    									<hr class="star-primary">
-	    									<img src="img/certificates/niit.jpg" class="img-responsive img-centered" alt="NIIT Certificate of Excellencem">
+	    									<img src="img/certificates/NIIT.jpg" class="img-responsive img-centered" alt="NIIT Certificate of Excellencem">
 	    							</div>
 	    						</div>
 	    					</div>
@@ -669,7 +669,7 @@
 	    							<div class="col-lg-12">
 	    								<h3 class="text-center">Job Ninja - Certificate of Excellent Performance</h3>
 	    									<hr class="star-primary">
-	    									<img src="img/certificates/jobninja.jpg" class="img-responsive img-centered" alt="Job Ninja - Certificate of Excellent Performance">
+	    									<img src="img/certificates/Jobninja.jpg" class="img-responsive img-centered" alt="Job Ninja - Certificate of Excellent Performance">
 	    							</div>
 	    						</div>
 	    					</div>
@@ -717,7 +717,7 @@
 	    							<div class="col-lg-12">
 	    								<h3 class="text-center">Java Multithreading - Udemy</h3>
 	    								<hr class="star-primary">
-	    								<img src="img/certificates/javaMultithreading.jpg" class="img-responsive img-centered" alt="Java Multithreading - Udemy">
+	    								<img src="img/certificates/JavaMultithreading.jpg" class="img-responsive img-centered" alt="Java Multithreading - Udemy">
 	    							</div>
 	    						</div>
 	    					</div>
