Added a new Projects

--- a/index.html
+++ b/index.html
@@ -740,6 +740,46 @@
     					<div class="row">
     						<div class="col-lg-12">
     							<div class="modal-body">
+    								<div class="col-lg-4">
+    									<h3>ITM - Interactive Task Manager</h3>
+    									<hr class="star-primary">
+    									<img src="img/projects/ITM.png" class="img-responsive img-centered" alt="">
+    									<p style="text-align: justify;">ITM is a task manager molded into a snake and ladder game. The game is embedded into the applicatio to make it more attractive and engaging. The application uses web technologies like HTML5, CSS3, Javascript and some AJAX.</p>
+    									<ul class="list-inline item-details">
+    										<li>Tags:
+    											<strong>HTML5, CSS3, Javascript, AJAX</strong>
+    										</li>
+    										<li>Date:
+    											<strong>December 2016</strong>
+    										</li>
+    										<li>Date:
+    											<strong><a href="http://startbootstrap.com">April 2014</a>
+    											</strong>
+    										</li>
+    										<li>Service:
+    											<strong>Web Development</strong>
+    										</li>
+    									</ul>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+    								</div>
+    								<div class="col-lg-4">
+    									<h3>GoFood - Order-Sell Food Online</h3>
+    									<hr class="star-primary">
+    									<img src="img/projects/GoFood.png" class="img-responsive img-centered" alt="">
+    									<p style="text-align: justify;">GoFood is an E-commerce web application simulation which allows you to order food online. The application provides platform for both the vendors to add their product and users to view all these products. Application also allows you to search.</p>
+    									<ul class="list-inline item-details">
+    										<li>Tags:
+    											<strong>Nodejs, MongoDB, Elastic search</strong>
+    										</li>
+    										<li>Date:
+    											<strong>November 2016</strong>
+    										</li>
+    										<li>Service:
+    											<strong>Web Development</strong>
+    										</li>
+    									</ul>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+    								</div>
     								<div class="col-lg-4 ">
     									<h3>User Authentication System</h3>
     									<hr class="star-primary">
@@ -750,7 +790,7 @@
     											<strong>Nodejs, Mean Stack, MongoDB</strong>
     										</li>
     										<li>Date:
-    											<strong>April 2014</strong>
+    											<strong>October 2015</strong>
     										</li>
     										<li>Service:
     											<strong>Web Development</strong>
@@ -768,32 +808,13 @@
     											<strong>Nodejs, Ajax, MongoDB</strong>
     										</li>
     										<li>Date:
-    											<strong>April 2014</strong>
+    											<strong>October 2016</strong>
     										</li>
     										<li>Service:
     											<strong>Web Development</strong>
     										</li>
     									</ul>
     									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Server-Client%20Side%20Manipulation"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-    								</div>
-    								<div class="col-lg-4">
-    									<h3>GoFood - Order-Sell Food Online</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/GoFood.png" class="img-responsive img-centered" alt="">
-    									<p style="text-align: justify;">GoFood is an E-commerce web application simulation which allows you to order food online. The application provides platform for both the vendors to add their product and users to view all these products. Application also allows you to search.</p>
-    									<ul class="list-inline item-details">
-    										<li>Tags:
-    											<strong>Nodejs, MongoDB, Elastic search</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong>Web Development</strong>
-    										</li>
-    									</ul>
-    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
     								</div>
     							</div>
     						</div>
