Added a new Projects

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
     									<h3>ITM - Interactive Task Manager</h3>
     									<hr class="star-primary">
     									<img src="img/projects/ITM.png" class="img-responsive img-centered" alt="">
-    									<p style="text-align: justify;">ITM is a task manager molded into a snake and ladder game. The game is embedded into the applicatio to make it more attractive and engaging. The application uses web technologies like HTML5, CSS3, Javascript and some AJAX.</p>
+    									<p style="text-align: justify;">ITM is a task manager molded into a snake and ladder game. The game is embedded into the applicatio to make it more attractive and engaging. The application uses web technologies like HTML5, CSS3, Javascript and some AJAX. The application also includes a walthrough to teach novice users how to use it.</p>
     									<ul class="list-inline item-details">
     										<li>Tags:
     											<strong>HTML5, CSS3, Javascript, AJAX</strong>
@@ -760,7 +760,7 @@
     											<strong>Web Development</strong>
     										</li>
     									</ul>
-    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+    									<a target="_blank" href="https://kiiiinnnnnnnnnyyyy.github.io/Human-Computer-Interaction/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
     								</div>
     								<div class="col-lg-4">
     									<h3>GoFood - Order-Sell Food Online</h3>
