Added a new Projects

--- a/index.html
+++ b/index.html
@@ -740,82 +740,105 @@
     					<div class="row">
     						<div class="col-lg-12">
     							<div class="modal-body">
-    								<div class="col-lg-4">
-    									<h3>ITM - Interactive Task Manager</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/ITM.png" class="img-responsive img-centered" alt="">
-    									<p style="text-align: justify;">ITM is a task manager molded into a snake and ladder game. The game is embedded into the applicatio to make it more attractive and engaging. The application uses web technologies like HTML5, CSS3, Javascript and some AJAX. The application also includes a walthrough to teach novice users how to use it.</p>
-    									<ul class="list-inline item-details">
-    										<li>Tags:
-    											<strong>HTML5, CSS3, Javascript, AJAX</strong>
-    										</li>
-    										<li>Date:
-    											<strong>December 2016</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong>Web Development</strong>
-    										</li>
-    									</ul>
-    									<a target="_blank" href="https://kiiiinnnnnnnnnyyyy.github.io/Human-Computer-Interaction/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
-    								</div>
-    								<div class="col-lg-4">
-    									<h3>GoFood - Order-Sell Food Online</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/GoFood.png" class="img-responsive img-centered" alt="">
-    									<p style="text-align: justify;">GoFood is an E-commerce web application simulation which allows you to order food online. The application provides platform for both the vendors to add their product and users to view all these products. Application also allows you to search.</p>
-    									<ul class="list-inline item-details">
-    										<li>Tags:
-    											<strong>Nodejs, MongoDB, Elastic search</strong>
-    										</li>
-    										<li>Date:
-    											<strong>November 2016</strong>
-    										</li>
-    										<li>Service:
-    											<strong>Web Development</strong>
-    										</li>
-    									</ul>
-    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
-    								</div>
-    								<div class="col-lg-4 ">
-    									<h3>User Authentication System</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
-    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
-    									<ul class="list-inline item-details">
-    										<li>Tags:
-    											<strong>Nodejs, Mean Stack, MongoDB</strong>
-    										</li>
-    										<li>Date:
-    											<strong>October 2015</strong>
-    										</li>
-    										<li>Service:
-    											<strong>Web Development</strong>
-    										</li>
-    									</ul>
-    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Lab%2010"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-    								</div>
-    								<div class="col-lg-4">
-    									<h3>Server-Client Side Manipulation</h3>
-    									<hr class="star-primary">
-    									<img src="img/projects/text-manipulation.png" class="img-responsive img-centered" alt="Server-Client Side Text Manipulation">
-    									<p style="text-align:justify;">A Project to demonstrate the functioning of both server-side and the client-side. The client-sdeuses AJAX and the server side program uses NodeJs. The form for both the programs has validations.</p>
-    									<ul class="list-inline item-details">
-    										<li>Tags:
-    											<strong>Nodejs, Ajax, MongoDB</strong>
-    										</li>
-    										<li>Date:
-    											<strong>October 2016</strong>
-    										</li>
-    										<li>Service:
-    											<strong>Web Development</strong>
-    										</li>
-    									</ul>
-    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Server-Client%20Side%20Manipulation"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-    								</div>
+    								<div class="col-lg-12">
+	    								<div class="col-lg-4">
+	    									<h3>ITM - Interactive Task Manager</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/ITM.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">ITM is a task manager molded into a snake and ladder game. The game is embedded into the applicatio to make it more engaging. The application uses web technologies like HTML5, CSS3, Javascript and some AJAX. </p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>HTML5, CSS3, Javascript, AJAX</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>December 2016</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong><a href="http://startbootstrap.com">April 2014</a>
+	    											</strong>
+	    										</li>
+	    										<li>Service:
+	    											<strong>Web Development</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://kiiiinnnnnnnnnyyyy.github.io/Human-Computer-Interaction/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+	    								</div>
+	    								<div class="col-lg-4">
+	    									<h3>GoFood - Order-Sell Food Online</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/GoFood.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">GoFood is an E-commerce web application simulation which allows you to order food online. The application provides platform for both the vendors to add their product and users to view all these products. Application also allows you to search.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Nodejs, MongoDB, Elastic search</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>November 2016</strong>
+	    										</li>
+	    										<li>Service:
+	    											<strong>Web Development</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+	    								</div>
+	    								<div class="col-lg-4">
+	    									<h3>BookCloud (Startup) - Buy-Sell Books online</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/bookcloud.jpg" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">BookCloud was a startup/ e-commerce website which allowed user to buy or sell books onlnie. The application used LAMP stack architecture. The application also included a MySQL-Ajax based chat application.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>HTML5, CSS3, PHP, MySQL</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>August 2015
+	    											</strong>
+	    										</li>
+	    										<li>Service:
+	    											<strong>Web Development</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https:facebook.com/bookcloud"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+	    								</div>
+	    							</div>
+	    							<div class="col-lg-12">
+	    								<div class="col-lg-4 ">
+	    									<h3>User Authentication System</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+	    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Nodejs, Mean Stack, MongoDB</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>October 2015</strong>
+	    										</li>
+	    										<li>Service:
+	    											<strong>Web Development</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Lab%2010"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+	    								</div>
+	    								<div class="col-lg-4">
+	    									<h3>Server-Client Side Manipulation</h3>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/text-manipulation.png" class="img-responsive img-centered" alt="Server-Client Side Text Manipulation">
+	    									<p style="text-align:justify;">A Project to demonstrate the functioning of both server-side and the client-side. The client-sdeuses AJAX and the server side program uses NodeJs. The form for both the programs has validations.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Nodejs, Ajax, MongoDB</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>October 2016</strong>
+	    										</li>
+	    										<li>Service:
+	    											<strong>Web Development</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Server-Client%20Side%20Manipulation"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+	    								</div>
+	    							</div>
     							</div>
     						</div>
     					</div>
